fixed carousel image not fitting on large resolution screens:

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -139,7 +139,7 @@ footer {
       font-size: 6vmin;
     }
   }
-  .carousel-image{
+  .carousel{
     max-height: 62vh;
     min-height: 62vh;
     min-width: auto;
